# garpix

./: .env.dev  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: celery.py  settings.py  urls.py
backend/album/: admin.py  apps.py  base.py  factories.py  models.py  tasks.py  tests.py  utils.py
backend/album/management/commands/: make_data.py
backend/album/templates/album/: notification.html
backend/api/v1/: urls.py
backend/api/v1/album/: permissions.py  routers.py  serializers.py  urls.py  views.py
